[gd_scene load_steps=3 format=3 uid="uid://cgvqddngxxold"]

[ext_resource type="Script" uid="uid://clptrhk6w7037" path="res://ui/scritps/pause_menu.gd" id="1_50142"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_euhrg"]
bg_color = Color(0, 0, 0, 0.282353)

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_50142")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_euhrg")

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "Pause Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="button_resume" type="Button" parent="Control/Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Resume"

[node name="back_to_home" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="button_quit" type="Button" parent="Control/Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="Control/Panel/VBoxContainer/button_resume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/back_to_home" to="." method="_on_back_to_home_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/button_quit" to="." method="_on_button_quit_pressed"]
